src/tests/snapshots/synoik__tests__window_opening__check_target_size@ofT-dhU-b-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault window height: U\nborder on\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 0 × 0, bounds: 1272 × 712, states: []
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
